# KeyRegistry

./: README.md  main.py  pyproject.toml  registry.py
auto_registry/: __init__.py  registry.py
models/: cnn_model.py  conv_model.py  linear_model.py
regy/: __init__.py  registry.py
test/: main.py
