[project]
name = "auto_registry"
version = "0.1.0"
description = "A Python package for dynamic model registration"
readme = "README.md"
authors = [
    { name = "Le Hoang Viet", email = "lehoangviet2k@google.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/Mikyx-1/AutoRegistry"
Repository = "https://github.com/Mikyx-1/AutoRegistry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
